# sfml_template_mac_m1

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
